<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/sidebar_1_white"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_download_center"
            android:icon="@drawable/sidebar_2_white"
            android:title="@string/menu_download_center" />
        <item
            android:id="@+id/nav_subscribe"
            android:icon="@drawable/sidebar_3_white"
            android:title="@string/menu_subscribe" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/sidebar_4_white"
            android:title="@string/menu_calendar" />

        <item
            android:id="@+id/nav_follow"
            android:icon="@drawable/sidebar_5_white"
            android:title="@string/menu_follow" />

        <item
            android:id="@+id/nav_guide"
            android:icon="@drawable/sidebar_6_white"
            android:title="@string/menu_guide" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/sidebar_7_white"
            android:title="@string/menu_setting" />
    </group>


</menu>
