<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.adsale.chinaplas.viewmodels.EventViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.adsale.chinaplas.ui.events.ConcurrentEventFragment">

        <TextView
            android:id="@+id/tv_tab_0"
            style="@style/event_date_tab_style"
            android:background="@{model.barClick.intValue()==0?@color/tab_color_2:@color/tab_color_1}"
            android:onClick="@{()->model.onClick(0)}"
            android:text="@string/event_tab_all"
            app:layout_constraintEnd_toStartOf="@+id/tv_tab_1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_tab_1"
            style="@style/event_date_tab_style"
            android:background="@{model.barClick.intValue()==1?@color/tab_color_2:@color/tab_color_1}"
            android:onClick="@{()->model.onClick(1)}"
            android:text="@string/event_date_1"
            app:layout_constraintEnd_toStartOf="@+id/tv_tab_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_tab_0"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_tab_2"
            style="@style/event_date_tab_style"
            android:background="@{model.barClick.intValue()==2?@color/tab_color_2:@color/tab_color_1}"
            android:onClick="@{()->model.onClick(2)}"
            android:text="@string/event_date_2"
            app:layout_constraintEnd_toStartOf="@+id/tv_tab_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_tab_1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_tab_3"
            style="@style/event_date_tab_style"
            android:background="@{model.barClick.intValue()==3?@color/tab_color_2:@color/tab_color_1}"
            android:onClick="@{()->model.onClick(3)}"
            android:text="@string/event_date_3"
            app:layout_constraintEnd_toStartOf="@+id/tv_tab_4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_tab_2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_tab_4"
            style="@style/event_date_tab_style"
            android:background="@{model.barClick.intValue()==4?@color/tab_color_2:@color/tab_color_1}"
            android:onClick="@{()->model.onClick(4)}"
            android:text="@string/event_date_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_tab_3"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/event_view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tab_0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
